cli/tests/snapshots/help__btrfs_inspect_subvolid_resolve.snap
---
source: cli/tests/help.rs
expression: text
---
Get subvolume ID and tree ID of the given path

Usage: subvolid-resolve <SUBVOLID> <PATH>

Arguments:
  <SUBVOLID>
          Subvolume ID to resolve

  <PATH>
          Path to a file or directory on the btrfs filesystem

Options:
  -h, --help
          Print help
