cli/tests/snapshots/help__btrfs_property_set.snap
---
source: cli/tests/help.rs
expression: text
---
Set a property on a btrfs object

Usage: set [OPTIONS] <OBJECT> <NAME> <VALUE>

Arguments:
  <OBJECT>
          Path to the btrfs object

  <NAME>
          Name of the property to set

  <VALUE>
          Value to assign to the property

Options:
  -t, --type <OBJECT_TYPE>
          Object type (inode, subvol, filesystem, device)
          
          [possible values: inode, subvol, filesystem, device]

  -f, --force
          Force the change

  -h, --help
          Print help
