cli/tests/snapshots/help__btrfs_qgroup.snap
---
source: cli/tests/help.rs
expression: text
---
Manage quota groups.

Quota groups (qgroups) track and limit disk usage at the subvolume level. Each
subvolume automatically gets a level-0 qgroup (e.g. 0/256 for subvolume 256)
that tracks how much data it references and how much is exclusive to it. Qgroups
cannot be applied to individual files or directories within a subvolume, only to
whole subvolumes. This is why per-directory quotas on btrfs require creating
separate subvolumes.

Higher-level qgroups (1/0, 2/0, ...) are user-created containers that aggregate
the usage of their member subvolumes and can enforce a shared limit across all
of them. For example, assigning several user home subvolumes to a single level-1
qgroup lets you cap their combined usage.

Quotas must be enabled first with "btrfs quota enable". Most operations require
CAP_SYS_ADMIN.

Usage: qgroup <COMMAND>

Commands:
  assign       Assign a qgroup as the child of another qgroup
  remove       Remove the relation between child qgroup SRC and DST
  create       Create a subvolume quota group
  destroy      Destroy a quota group
  show         List subvolume quota groups
  limit        Set limits on a subvolume quota group
  clear-stale  Clear all stale qgroups (level 0/subvolid) without a subvolume
  help         Print this message or the help of the given subcommand(s)

Options:
  -h, --help
          Print help (see a summary with '-h')
