cli/tests/snapshots/help__btrfs_qgroup_assign.snap
---
source: cli/tests/help.rs
expression: text
---
Assign a qgroup as the child of another qgroup

Usage: assign [OPTIONS] <SRC> <DST> <PATH>

Arguments:
  <SRC>
          Source qgroup id (e.g. "0/5")

  <DST>
          Destination qgroup id (e.g. "1/0")

  <PATH>
          Path to a mounted btrfs filesystem

Options:
      --rescan
          Schedule a quota rescan if needed (default)

      --no-rescan
          Do not schedule a quota rescan

  -h, --help
          Print help
